--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "portfolio-app"
+    }
+  },
+  "defaultProject": "portfolio-app",
+  "cli": {
+    "analytics": "6f1f1e93-9f20-41fa-8e20-32a1b8678cb2"
+  }
 }
